fix default backend url

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ PUBLIC_STRIPE_KEY=""
 PUBLIC_GOOGLE_API_KEY=""
 PUBLIC_TURNSTILE_SITE_KEY=""
 
-MEDUSA_BACKEND_URL="https://localhost:9000"
+MEDUSA_BACKEND_URL="http://localhost:9000"
 SECRET_STRIPE_KEY=""
 SECRET_TURNSTILE_KEY=""
 CLOUDFLARE_ACCESS_ID=""
