add explanatory comments

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,28 @@
+# Setting this will help ensure that you don't get errors from SvelteKit's built-in CSRF protection
 ORIGIN=http://localhost:5173
 
+# This is the URL of your Medusa backend
+MEDUSA_BACKEND_URL="http://localhost:9000"
+
+# These settings will be use to generate your SEO tags
 PUBLIC_SITE_NAME="Medusa Store"
 PUBLIC_SITE_DESCRIPTION="This is my awesome Medusa store."
 PUBLIC_SITE_IMAGE="http://localhost:5173/logo.png"
 PUBLIC_SITE_URL="http://localhost:5173"
 PUBLIC_IMAGE_BASE_URL="https://bucket.s3.us-east-1.amazonaws.com"
 
+# Optional settings for Twitter SEO tags
 PUBLIC_TWITTER_HANDLE="@example"
 PUBLIC_TWITTER_SITE="@example"
 PUBLIC_TWITTER_CARD_TYPE="summary_large_image"
 
+# Required settings for Stripe, Address Autocomplete, and Turnstile
 PUBLIC_STRIPE_KEY=""
 PUBLIC_GOOGLE_API_KEY=""
 PUBLIC_TURNSTILE_SITE_KEY=""
-
-MEDUSA_BACKEND_URL="http://localhost:9000"
 SECRET_STRIPE_KEY=""
 SECRET_TURNSTILE_KEY=""
+
+# Optional settings for connecting to a Medusa backend with Cloudflare Access service token authentication
 CLOUDFLARE_ACCESS_ID=""
 CLOUDFLARE_ACCESS_SECRET=""
