--- a/package.json
+++ b/package.json
@@ -1,7 +1,27 @@
 {
-	"name": "tsstore",
-	"version": "0.0.1",
-	"private": true,
+	"name": "sveltekit-medusa-starter",
+	"version": "0.1.0",
+	"description": "SvelteKit storefront starter app for MedusaJS eCommerce platform",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/pevey/sveltekit-medusa-starter"
+	},
+	"homepage": "https://pevey.com/sveltekit-medusa-starter",
+	"author": "Lacey Pevey",
+	"license": "MIT",
+	"keywords": [
+		"svelte",
+		"sveltekit",
+		"stripe",
+		"payment",
+		"payments",
+		"address",
+		"elements",
+		"pricing table",
+		"checkout",
+		"subscriptions",
+		"ecommerce"
+	],
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -18,6 +38,8 @@
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
+		"@tailwindcss/forms": "^0.5.4",
+		"@tailwindcss/typography": "^0.5.9",
 		"autoprefixer": "^10.4.14",
 		"dotenv": "^16.3.1",
 		"lucide-svelte": "^0.263.0",
@@ -25,8 +47,10 @@
 		"postcss-load-config": "^4.0.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-meta-tags": "^2.8.0",
 		"svelte-sequential-preprocessor": "^2.0.1",
-		"sveltekit-medusa-client": "^1.12.1-b",
+		"sveltekit-medusa-client": "^1.13.0",
+		"sveltekit-search-params": "^1.0.14",
 		"sveltekit-stripe": "^1.1.0",
 		"sveltekit-superforms": "^1.5.0",
 		"sveltekit-turnstile": "^1.2.0",
