update client version, allow auth and checkout to load without Turnstile

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sveltekit-medusa-starter",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"description": "SvelteKit storefront starter app for MedusaJS eCommerce platform",
 	"repository": {
 		"type": "git",
@@ -24,7 +24,7 @@
 	],
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "shx rm -rf ./dist && vite build",
 		"preview": "vite preview",
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -45,11 +45,12 @@
 		"lucide-svelte": "^0.263.0",
 		"postcss": "^8.4.27",
 		"postcss-load-config": "^4.0.1",
+      "shx": "^0.3.4",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"svelte-meta-tags": "^2.8.0",
 		"svelte-sequential-preprocessor": "^2.0.1",
-		"sveltekit-medusa-client": "^1.13.1",
+		"sveltekit-medusa-client": "^2.0.0",
 		"sveltekit-search-params": "^1.0.14",
 		"sveltekit-stripe": "^1.1.0",
 		"sveltekit-superforms": "^1.5.0",
