--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sveltekit-medusa-starter",
-	"version": "0.1.2",
+	"version": "0.2.0",
 	"description": "SvelteKit storefront starter app for MedusaJS eCommerce platform",
 	"repository": {
 		"type": "git",
@@ -24,7 +24,7 @@
 	],
 	"scripts": {
 		"dev": "vite dev",
-		"build": "shx rm -rf ./dist && vite build",
+		"build": "shx rm -rf ./build && vite build",
 		"preview": "vite preview",
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -33,27 +33,27 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
-		"@melt-ui/pp": "^0.1.0",
-		"@melt-ui/svelte": "^0.31.0",
+		"@melt-ui/pp": "^0.1.2",
+		"@melt-ui/svelte": "^0.39.4",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/kit": "^1.24.0",
 		"@tailwindcss/forms": "^0.5.4",
 		"@tailwindcss/typography": "^0.5.9",
 		"autoprefixer": "^10.4.14",
 		"dotenv": "^16.3.1",
-		"lucide-svelte": "^0.263.0",
+		"lucide-svelte": "^0.269.0",
 		"postcss": "^8.4.27",
 		"postcss-load-config": "^4.0.1",
 		"shx": "^0.3.4",
-		"svelte": "^4.0.5",
+		"svelte": "^4.2.0",
 		"svelte-check": "^3.4.3",
-		"svelte-meta-tags": "^2.8.0",
+		"svelte-meta-tags": "^3.0.3",
 		"svelte-sequential-preprocessor": "^2.0.1",
-		"sveltekit-medusa-client": "^2.0.2",
-		"sveltekit-search-params": "^1.0.14",
+		"sveltekit-medusa-client": "^3.1.2",
+		"sveltekit-search-params": "^1.0.15",
 		"sveltekit-stripe": "^1.1.0",
-		"sveltekit-superforms": "^1.5.0",
+		"sveltekit-superforms": "^1.5.1",
 		"sveltekit-turnstile": "^1.2.0",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
