--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Setting this will help ensure that you don't get errors from SvelteKit's built-in CSRF protection
-ORIGIN=http://localhost:5173
+ORIGIN="http://localhost:5173"
 
 # This is the URL of your Medusa backend
 MEDUSA_BACKEND_URL="http://localhost:9000"
